# moni_serv

./: manage.py  pyproject.toml  readme.md
api/: admin.py  models.py
api/migrations/: 0001_initial.py  0002_monimetric.py
dashboard/: admin.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
moni_serv/: asgi.py  settings.py  urls.py  wsgi.py
templates/admin/: add_agent.html  dashboard.html
templates/auth/: login.html
templates/block/: base.html  nav.html
