[tool.poetry]
name = "moni-serv"
version = "0.1.0"
description = "Dashboard and control for agent"
authors = ["msterhuj <gabin.lanore@gmail.com>"]
readme = "README.md"
packages = [{include = "moni_serv"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.10"
uvicorn = "^0.21.1"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
